# upgrade-pyproject-static-deps

./: Cargo.toml  README.md  TODO.md
src/: dependencies.rs  files.rs  main.rs  parser.rs  projects.rs
src/dependencies/: locations.rs
src/sections/: locations.rs
