[package]
name = "upgrade-pyproject-static-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
color-eyre = "0.6.3"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "upgrade-pyproject-static-deps"

[profile.release]
lto = "thin"
