[package]
name = "upgrade-pyproject-static-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
inquire = "0.7.5"
regex = "1.10.5"
once_cell = "1.19.0"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "upgrade-pyproject-static-deps"

[profile.release]
lto = "thin"
